<resources>
    <string name="app_name">Hear4U</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Login</string>
    <string name="login">Login</string>
    <string name="fill_email">Email cannot be empty</string>
    <string name="fill_password">The password cannot be empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_get_started">Let\'s Get Started!\"</string>
    <string name="identify_various_types_of_audio">Identify various types of audio</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome!</string>
    <string name="let_s_unlock_the_world_of_sounds_around_you">Let\'s unlock the world of sounds \naround you.</string>
    <string name="tv_continue">Continue</string>
    <string name="hear4u">Hear4U</string>
    <string name="hello_user_placeholder">Hi, %1$s</string>
    <string name="ask_home">let\'s see, what can i do for you?</string>
    <string name="chit_home">Help People to talk \nwith you</string>
    <string name="information_title">Helpful Information</string>
    <string name="button_back">Button Back</string>
    <string name="ini_judul">Ini Judul</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum viverra felis at arcu varius, ac venenatis nisi luctus. Pellentesque lobortis tincidunt aliquet. Phasellus a tellus metus. Maecenas vel enim nec lorem egestas consequat in non lacus. Pellentesque luctus leo sit amet fringilla rhoncus. Nulla sit amet turpis in sem viverra dignissim. Quisque sed purus eget nibh faucibus egestas. Duis sodales blandit interdum. Etiam eu justo ac enim tincidunt dignissim. Cras tempus ante at magna consectetur hendrerit.</string>
    <string name="help_people_to_talk_nwith_you">Help People to talk \nwith you</string>
    <string name="hi_john_doe">Hi, John Doe</string>
    <string name="ini_user">ini User</string>
    <string name="photoprofile">photoProfile</string>
    <string name="output">Output</string>
    <string name="chit_chat">Chit Chat!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save Change</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="about_text">This project aims to assist people with hearing disabilities who struggle to identify sounds in their environment, affecting their social activities and interactions. While hearing aids are available, they may not always be affordable or fully meet the users\' needs. The app operates by capturing sounds via a microphone and presenting speech recognition results visually on the user\'s screen, enhancing their ability to comprehend and respond to surrounding sounds. The research questions for this project are how to build a tool that can detect sound types easily and accurately, how to ensure Hear4U is accessible and usable by a wide range of people with hearing disabilities, and how well the app can help people with hearing disabilities in carrying out their activities. Our team wants to help people who are hard of hearing to communicate more easily and actively interact with their surroundings. The project aims to create a simple and easy-to-use tool that can improve their quality of life and social skills. Hear4U will make it easier for them to hear and respond to surrounding sounds better, so they can be more confident and independent in their daily activities.</string>
    <string name="failed_to_parse_server_response">Failed to parse server response</string>
</resources>