<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landingPage.LandingFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:id="@+id/tv_hear4u_landing_page"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/hear4u"
           android:layout_marginTop="40dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:textSize="32sp"
           android:textStyle="bold"
           android:fontFamily="@font/plus_jakarta_sans_variable_font_wght"
           app:layout_constraintTop_toTopOf="parent"/>
       <ImageView
           android:id="@+id/img_landing_page"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/img_landing_page"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginTop="86dp"
           app:layout_constraintTop_toBottomOf="@+id/tv_hear4u_landing_page" />
       <TextView
           android:id="@+id/tv_welcome_landing_page"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/img_landing_page"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="82dp"
           android:text="@string/welcome"
           android:textSize="28sp"
           android:textStyle="bold"
           android:fontFamily="@font/plus_jakarta_sans_variable_font_wght" />
       <TextView
           android:id="@+id/tv_text_landing_page"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/tv_welcome_landing_page"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:text="@string/let_s_unlock_the_world_of_sounds_around_you"
           android:textSize="17sp"
           android:textColor="@color/tertiary"
           android:textAlignment="center"
           android:fontFamily="@font/plus_jakarta_sans_variable_font_wght"/>

       <Button
           android:id="@+id/btn_continue"
           android:theme="@style/Base.Theme.Hear4U.ButtonVariant1"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:text="@string/tv_continue"
           android:layout_marginHorizontal="47dp"
           android:layout_marginTop="82dp"
           app:cornerRadius="10dp"
           android:textColor="@color/white"
           android:textSize="20sp"
           app:layout_constraintTop_toBottomOf="@+id/tv_text_landing_page"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:fontFamily="@font/plus_sans_jakarta_semibold" />

       <FrameLayout
           android:id="@+id/container"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:visibility="gone"
           tools:visibility="gone"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>