<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landingPage.WelcomeFragment"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/fragment_container"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_welcome_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/img_welcome_page"
                android:layout_marginTop="179dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_welcome_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_variable_font_wght"
                android:text="@string/let_s_get_started"
                android:textStyle="bold"
                android:layout_marginTop="81dp"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_welcome_page"/>

            <TextView
                android:id="@+id/tv_welcome_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_variable_font_wght"
                android:text="@string/identify_various_types_of_audio"
                android:textColor="@color/tertiary"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title"/>

            <Button
                android:id="@+id/btn_get_started"
                android:theme="@style/Base.Theme.Hear4U.ButtonVariant1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/plus_sans_jakarta_semibold"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="90dp"
                android:layout_marginHorizontal="47dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title_2" />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_login"
                android:theme="@style/Base.Theme.Hear4U.ButtonVariant1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/plus_sans_jakarta_semibold"
                android:text="@string/login"
                android:textColor="@color/second_color"
                android:textSize="20sp"
                android:layout_marginTop="7dp"
                android:layout_marginHorizontal="47dp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/second_color"
                app:strokeWidth="3dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_get_started"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>